Conv operator continued

--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOS0RjgGeiwz+KgO6AYVoBJ",
+      "authorship_tag": "ABX9TyOBPkrsZ5zWy1oczz8IlVtB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -435,6 +435,57 @@
       },
       "source": [
         "Convolutions operate over 3D tensors, called *feature maps*, with two spatial axes( *height* and *width*) as well as a *depth* axis (also called the *channels* axis). For an RGB image, the dimension of the depth axis is 3, because the image has three color channels: red, green, and blue. The convolution operation extracts patches from its input feature map and applies the same transformation to all of these patches, producing an *output feature map*. This output feature map is still a 3D tensor: it has a width and a height. Its depth can be arbitrary, because the output depth is a parameter of the layer, and the different channels in that depth axis no longer stand for specific colors as in RGB input; rather, they stand for *filters*. Filters encode specific apsects of the input: at a high level, a single filter could encode the concept \"presence of a face in the input,\" for instance."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lR7PeSgkEiVY",
+        "colab_type": "text"
+      },
+      "source": [
+        "In the MNIST example, the first convolution layer takes a feature map of size (28, 28, 1) and outputs a feature map of size (26, 26, 32): it computes 32 filters over its input. Each of these 32 output channels contains a 26 X 26 grid of values, which is a *response map* of the filter over the input, indicating the response of that filter pattern at different locations in the input. That is what the term *feature map* means: every dimension in the depth axis is a feature (or filter), and the 2D tensor output[:, :, n] is the 2D spatial *map* of the response of this filter over the input."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "shMB2n6mHiEG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Convolutions are defined by two key parameters:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xohUGUcQHoAC",
+        "colab_type": "text"
+      },
+      "source": [
+        "* *Size of the patches extracted from the inputs* -- These are typically 3 x 3 or 5 x 5. In the example, they were 3 x 3, which is a common choice.\n",
+        "* *Depth of the output feature map* -- The number of filters computed by the convolution. The example started it out with a depth of 32 and ended with a depth of 64."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8OyLcPajI3QY",
+        "colab_type": "text"
+      },
+      "source": [
+        "In Keras Conv2D layers, these parameters are the first arguments passed to the layer: Conv2D(output_depth, (window_height, window_width))."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AUezV6xcJy1k",
+        "colab_type": "text"
+      },
+      "source": [
+        "A convolution works by *sliding* these windows of size 3 x 3 or 5 x 5 o"
       ]
     }
   ]
