Border effects and padding

--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOBPkrsZ5zWy1oczz8IlVtB",
+      "authorship_tag": "ABX9TyM52C5bSkxWTR+Vstdd+jwT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -485,7 +485,39 @@
         "colab_type": "text"
       },
       "source": [
-        "A convolution works by *sliding* these windows of size 3 x 3 or 5 x 5 o"
+        "A convolution works by *sliding* these windows of size 3 x 3 or 5 x 5 over the 3D input feature map, stopping at every possible location, and extracting the 3D patch of surrounding features. Each such 3D patch is then transformed (via a tensor product with the same learned weigth matrix, called the *convolution kernel*) into a 1D vector of shape (output_depth,). All of these vectors are then spatially reassembled into a 3D output map of shape (height, width, output_depth). Every spatial location in the output feature map corresponds to the same location in the input feature map. For instance, with 3 x 3 windows, the vector output[i, j, :] comes from the 3D patch input[i-1:i+1, j-1:j+1, :]. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z59TPYLSabRV",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that the output width and height may differ from the input width and height. They may differ for two reasons:\n",
+        "* Border effects, which can be countered by padding the input feature map\n",
+        "* The use of *strides*, which I'll define in a second."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7bXpZrmBbEKJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# UNDERSTANDING BORDER EFFECTS AND PADDING "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xUBTg3m1bMgY",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
