--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO+SkYVEzNCZIbHhOrUMqR6",
+      "authorship_tag": "ABX9TyNaoqTAwLr0/B8KuA64gtrF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -579,7 +579,147 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "#The max-pooling operation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jFglV_NSGW6u",
+        "colab_type": "text"
+      },
+      "source": [
+        "In the convnet example, you may have noticed that size of the feature maps is halved after every MaxPooling2D layer. For instance, before the first MaxPooling2D layers, the feature map is 26 x 26, but the max-pooling operation halves it to 13 x 13. That's the role of max pooling: to aggressively downsample feature maps, much like strided convolutions. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cH92HebjGW2B",
+        "colab_type": "text"
+      },
+      "source": [
+        "Max pooling consists of extracting windows from the input feature maps and outputting the max value of each channel. It's conceptually similar to convolution, except that instead of transforming local patches via a learned linear transformation(the convolution kernel), they're transformed via a hardcoded max tensor operation. A big difference from convolution is that max pooling is usually done with 2 x 2 windows and stride 2, in order to downsample the feature maps by a factor of 2. On the other hand, convolution is typically done with 3 x 3 windows and no stride (stride 1)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yavjsT7MObZl",
+        "colab_type": "text"
+      },
+      "source": [
+        "Why downsample feature maps this way?  Why not remove the max-pooling layers and keep fairly large feature maps all the way up? Let's look at this option. The convolutional base of the model would then look like this:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AUvcaWk_RNBO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras import models\n",
+        "from keras import layers\n",
+        "\n",
+        "model_no_max_pool = models.Sequential()\n",
+        "model_no_max_pool.add(layers.Conv2D(32, (3, 3), activation='relu',\n",
+        "input_shape=(28, 28, 1)))\n",
+        "model_no_max_pool.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+        "model_no_max_pool.add(layers.Conv2D(64, (3, 3), activation='relu'))"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VVvXX-M3TSFA",
+        "colab_type": "text"
+      },
+      "source": [
+        "Here's a summary of the model:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xvmsOTbyTRk8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 269
+        },
+        "outputId": "9953efd9-7ba4-4899-c257-fe8283896905"
+      },
+      "source": [
+        "model_no_max_pool.summary()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_4\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv2d_4 (Conv2D)            (None, 26, 26, 32)        320       \n",
+            "_________________________________________________________________\n",
+            "conv2d_5 (Conv2D)            (None, 24, 24, 64)        18496     \n",
+            "_________________________________________________________________\n",
+            "conv2d_6 (Conv2D)            (None, 22, 22, 64)        36928     \n",
+            "=================================================================\n",
+            "Total params: 55,744\n",
+            "Trainable params: 55,744\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y_tLf7aGUq8h",
+        "colab_type": "text"
+      },
+      "source": [
+        "What's wrong with this setup? Two things:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H5rQLE-nUv-Q",
+        "colab_type": "text"
+      },
+      "source": [
+        "* It isn't conducive to learning a spatial hierarchy of features. The 3 x 3 windows in the third layer will only contain information coming from 7 x 7 windows in the initial input. The high-level pattern learned by the convnet will still be very small with regard to the intial input, which may not be enough to learn to classify digits. We need the features from the last convolution layer to contain information about the totality of the input.\n",
+        "\n",
+        "* The final feature map has 22 x 22 x 64 = 30,976 total coefficients per sample. This is huge. If you were to flatten it to stick a Dense layer of size 512 on top, that layer would have 15.8 million parameters. This is far too large for such a small model and would result in intense overfitting."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sKYwYjy5YUQu",
+        "colab_type": "text"
+      },
+      "source": [
+        "In short, the reason to use downnsampling is to reduce the number of feature-map coefficients to process, as well as to induce spatial-filter hierarchies by making successive convolution layers look at increasingly large windows (in terms of the fraction of the original input they cover). "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rpYmMEJuY1Po",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that max pooling isn't the only way you can acheive such downsampling. As you already know, you can also use strides in the prior convolution layer. And you can use average pooling instead of max pooling, where each local input patch is transformed by taking the average pooling instead of max pooling, where each local input patch is transformed by taking the average value of each channel over the patch, rather than the max. But max pooling tends to work better than these alternative solutions. In a nutshell, the reason is that features tend to encode the spatial presence of some pattern or concept over the different tiles of the feature map, and it's more informative to look at the *maximal presence* of different features than at their *average presence*. So the most reasonable subsampling strategy is to first produce dense maps of features and then look at the maximal activation of the features over small patches, rather than looking at sparser windows of the inputs or averaging input patches, which could cause you to miss or dilute feature-presence information. "
       ]
     }
   ]
