--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNaoqTAwLr0/B8KuA64gtrF",
+      "authorship_tag": "ABX9TyO7lec/KOX4qFrCfGuxd4up",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -629,7 +629,7 @@
         "model_no_max_pool.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
         "model_no_max_pool.add(layers.Conv2D(64, (3, 3), activation='relu'))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -656,7 +656,7 @@
       "source": [
         "model_no_max_pool.summary()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -720,6 +720,36 @@
       },
       "source": [
         "Note that max pooling isn't the only way you can acheive such downsampling. As you already know, you can also use strides in the prior convolution layer. And you can use average pooling instead of max pooling, where each local input patch is transformed by taking the average pooling instead of max pooling, where each local input patch is transformed by taking the average value of each channel over the patch, rather than the max. But max pooling tends to work better than these alternative solutions. In a nutshell, the reason is that features tend to encode the spatial presence of some pattern or concept over the different tiles of the feature map, and it's more informative to look at the *maximal presence* of different features than at their *average presence*. So the most reasonable subsampling strategy is to first produce dense maps of features and then look at the maximal activation of the features over small patches, rather than looking at sparser windows of the inputs or averaging input patches, which could cause you to miss or dilute feature-presence information. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hZUil59wVK1J",
+        "colab_type": "text"
+      },
+      "source": [
+        "#5.2 Training a convent from scratch on a small dataset"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-RYXeA0NWY0a",
+        "colab_type": "text"
+      },
+      "source": [
+        "Having to train an image-classification model using very little data is a common situation, which you'll likely ecnounter in practice if you ever do computer vision in a professional context. A \"few\" samples can mean anywhere from a few hundred to a few tens of thousands of images. As a practical example, we'll focus on classifying images as dogs or cats, in a dataset containing 4,000 pictures of cats and dogs. We'll use 2,000 pictures for training-- 1,000 for validation, and 1,000 for testing."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pLcI8BUfYmsE",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this section, we'll review one basic strategy to "
       ]
     }
   ]
