Tweaking python directories

--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPS2xtl0y0ogAtyQeMoWiGw",
+      "authorship_tag": "ABX9TyNE0chTCmapRgmBEatDG0ep",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -760,6 +760,82 @@
       },
       "source": [
         "In the next section, we'll review two more essential techniques for applying deep learning to small datasets: *faeture extraction with a pretrained network* (improving accuracy to 96% from 90%) and *fine-tuning a pretrained network* (getting to an accuracy of 97%) These strategies will form the workflow or toolbox for image classification on small datasets."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bqSSxwsT-Zd5",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C0CKmGRWDM7Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "Listing 5.4 Copying images to training, validation, and test directories"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wSJuLZdaCg21",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "15335125-f476-4f6a-aa66-e919ea94dd2c"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S0OSZvD2CriY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8c08a043-a29f-4f5c-9c9a-a26c83ffab21"
+      },
+      "source": [
+        "import os, shutil\n",
+        "\n",
+        "# print(os.getcwd())\n",
+        "# current wd is gdrive\n",
+        "\n",
+        "original_data"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/gdrive\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
