Chunk in progress

--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -6,7 +6,7 @@
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM2xOLzTIyUhF9SbkBH1Wnq",
+      "authorship_tag": "ABX9TyOBM+d6InT2xCnZy8QAs8s7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1262,6 +1262,43 @@
           },
           "execution_count": 11
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2AT6CKPxbtmD",
+        "colab_type": "text"
+      },
+      "source": [
+        "Psuedo code to refactor "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fqehLmkCbuMd",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "import os, shutil\n",
+        "\n",
+        "orinal_dataset_dir = '/Users/fchollet/Downloads/kaggle_original_data'\n",
+        "\n",
+        "base_dir = '/Users/fchollet/Downloads/cats_and_dogs_small'\n",
+        "os.mkdir(base_dir)\n",
+        "\n",
+        "train_dir = os.path.join(base_dir, 'train')\n",
+        "os.mkdir(train_dir)\n",
+        "validation_dir = os.path.join(base_dir, 'test')\n",
+        "os.mkdir(validation_dir)\n",
+        "test_dir = os.path.join(base_dir, 'test')\n",
+        "os.mkdir(test_dir)\n",
+        "\n",
+        "train_cats\n",
+        "\n",
+        "```\n"
       ]
     }
   ]
