--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -6,7 +6,7 @@
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOBM+d6InT2xCnZy8QAs8s7",
+      "authorship_tag": "ABX9TyOO4pqCzF0yDhX82GK9UsUw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1296,7 +1296,23 @@
         "test_dir = os.path.join(base_dir, 'test')\n",
         "os.mkdir(test_dir)\n",
         "\n",
-        "train_cats\n",
+        "train_cats = os.path.join(train_dir, 'cats')\n",
+        "os.mkdir(trains_cats_dir)\n",
+        "\n",
+        "train_dogs_dir = os.path.join(train_dir, 'dogs')\n",
+        "os.mkdir(train_dogs_dir)\n",
+        "\n",
+        "validation_cats_dir = os.path.join(validation_dir, 'cats')\n",
+        "os.mdkdir(validation_cats_dir)\n",
+        "\n",
+        "validation_dogs_dir = os.path.join(validation_dir, 'dogs')\n",
+        "os.mkdir(validation_dogs_dir)\n",
+        "\n",
+        "test_cats_dir = os.path.join(test_dir, 'cats')\n",
+        "os.mkdir(test_cats_dir)\n",
+        "\n",
+        "test_dogs_dir = os.path.join(test_dir, 'dogs')\n",
+        "os.mkdir(test_dogs_dir)\n",
         "\n",
         "```\n"
       ]
