--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -6,7 +6,7 @@
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOO4pqCzF0yDhX82GK9UsUw",
+      "authorship_tag": "ABX9TyMLd/4ilJotlFQNWUXAhVQJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1314,6 +1314,23 @@
         "test_dogs_dir = os.path.join(test_dir, 'dogs')\n",
         "os.mkdir(test_dogs_dir)\n",
         "\n",
+        "fnames = ['cat.{}.jpg'.format(i) for i in range(1000) ]\n",
+        "for fname in fnames:\n",
+        "    src = os.path.join(original_dataset_dir, fname)\n",
+        "    dst = os.path.join(train_cats_dir, fname)\n",
+        "    shutil.copyfile(src, dst)\n",
+        "    \n",
+        "fnames = ['cat.{}.jpg'.format(i) for i in range(1000, 1500) ]\n",
+        "for fname in fnames:\n",
+        "    src = os.path.join(original_dataset_dir, fname)\n",
+        "    dst = os.path.join(validation_cats_dir, fname)\n",
+        "    shutil.copyfile(src, dst)\n",
+        "\n",
+        "fnames = ['cat.{}.jpg'.format(i) for i in range(1500, 2000)\n",
+        "    src = os.path.join(original_dataset_dir, fname)\n",
+        "    dst = os.path.join(test_cats_dir, fname)\n",
+        "    shutil.copyfile(src, dst)\n",
+        "    \n",
         "```\n"
       ]
     }
