--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -6,7 +6,7 @@
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMLd/4ilJotlFQNWUXAhVQJ",
+      "authorship_tag": "ABX9TyNrAPCe8BI3cDryexwoRULR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1326,11 +1326,18 @@
         "    dst = os.path.join(validation_cats_dir, fname)\n",
         "    shutil.copyfile(src, dst)\n",
         "\n",
-        "fnames = ['cat.{}.jpg'.format(i) for i in range(1500, 2000)\n",
+        "fnames = ['cat.{}.jpg'.format(i) for i in range(1500, 2000) ]\n",
         "    src = os.path.join(original_dataset_dir, fname)\n",
         "    dst = os.path.join(test_cats_dir, fname)\n",
         "    shutil.copyfile(src, dst)\n",
-        "    \n",
+        "\n",
+        "fnames = ['dog.{}.jpg'.fromat(i) for i in range(1000) ]\n",
+        "for fname in fnames:\n",
+        "    src = os.path.join(original_dataset_dir, fname)\n",
+        "    dst = os.path.join(train_dogs_dir, fname)\n",
+        "    shutil.copyfile(src, dst)\n",
+        "\n",
+        "fnames \n",
         "```\n"
       ]
     }
