--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNLtMV9FEhkQU1PfQKxjoFX",
+      "authorship_tag": "ABX9TyPcRkCtUbeAEhlAD2t9r2YN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -826,7 +826,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 197
+          "height": 217
         },
         "outputId": "ae786a5f-f25d-4ec2-841f-db6b4992f7d9"
       },
@@ -860,9 +860,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 262
         },
-        "outputId": "433b3a90-8f77-4a34-a619-8dd60796df13"
+        "outputId": "fd5251a7-721b-4db8-a071-581864356c8f"
       },
       "source": [
         "import os, shutil\n",
@@ -876,9 +876,68 @@
         "base_dir = '/content/drive/My\\ Drive/Colab\\ Notebooks/cats_and_dogs_small'\n",
         "os.mkdir(base_dir)\n",
         "\n",
-        "\n"
+        "train_dir = os.path.join(base_dir, 'train')\n",
+        "os.mkdir(train_dir)\n",
+        "validation_dir = os.path.join(base_dir, 'validation')\n",
+        "os.mkdir(validation_dir)\n",
+        "test_dir = os.path.join(base_dir, 'test')\n",
+        "os.mkdir(test_dir)\n",
+        "\n",
+        "train_cats_dir = os.path.join(train_dir, 'cats')\n",
+        "os.mkdir(train_cats_dir)\n",
+        "\n",
+        "train_dogs_dir = os.path.join(train_dir, 'dogs')\n",
+        "os.mkdir(train_dogs_dir)\n",
+        "\n",
+        "validation_cats_dir = os.path.join(validation_dir, 'cats')\n",
+        "os.mkdir(validation_cats_dir)\n",
+        "\n",
+        "validation_dogs_dir = os.path.join(validation_dir, 'dogs')\n",
+        "os.mkdir(validation_dogs_dir)\n",
+        "\n",
+        "test_cats_dir = os.path.join(test_dir, 'cats')\n",
+        "os.mkdir(test_cats_dir)\n",
+        "\n",
+        "test_dogs_dir = os.path.join(test_dir, 'dogs')\n",
+        "os.mkdir(test_dogs_dir)\n",
+        "\n",
+        "fnames = ['cat.{}.jpg'.format(i) for i in range(1000)]\n",
+        "for fname in fnames:\n",
+        "    src = os.path.join(original_dataset_dir, fname)\n",
+        "    dst = os.path.join(train_cats_dir, fname)\n",
+        "    shutil.copyfile(src, dst)\n",
+        "\n",
+        "fnames = ['cat.{}.jpg'.format(i) for i in range(1000, 1500)]\n",
+        "for fname in fnames:\n",
+        "    src = os.path.join(original_dataset_dir, fname)\n",
+        "    dst = os.path.join(validation_cats_dir, fname)\n",
+        "    shutil.copyfile(src, dst)\n",
+        "\n",
+        "fnames = ['cat.{}.jpg'.format(i) for i in range(1500, 2000)]\n",
+        "for fname in fnames:\n",
+        "    src = os.path.join(original_dataset_dir, fname)\n",
+        "    dst = os.path.join(test_cats_dir, fname)\n",
+        "    shutil.copyfile(src, dst)\n",
+        "\n",
+        "fnames = ['dog.{}.jpg'.format(i) for i in range(1000)]\n",
+        "for fname in fnames:\n",
+        "    src = os.path.join(original_dataset_dir, fname)\n",
+        "    dst = os.path.join(train_dogs_dir, fname)\n",
+        "    shutil.copyfile(src, dst)\n",
+        "\n",
+        "fnames = ['dog.{}.jpg'.format(i) for i in range(1000, 1500)]\n",
+        "for fname in fnames:\n",
+        "    src = os.path.join(original_dataset_dir, fname)\n",
+        "    dst = os.path.join(validation_dogs_dir, fname)\n",
+        "    shutil.copyfile(src, dst)\n",
+        "\n",
+        "fnames = ['dog.{}.jpg'.format(i) for i in range(1500, 2000)]\n",
+        "for fname in fnames:\n",
+        "    src = os.path.join(original_dataset_dir, fname)\n",
+        "    dst = os.path.join(test_dogs_dir, fname)\n",
+        "    shutil.copyfile(src, dst)"
       ],
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -886,6 +945,17 @@
             "/content\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-7d488d16f1ba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mbase_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/content/drive/My\\ Drive/Colab\\ Notebooks/cats_and_dogs_small'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mtrain_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'train'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/My\\\\ Drive/Colab\\\\ Notebooks/cats_and_dogs_small'"
+          ]
         }
       ]
     },
