Images are in the desired location

--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPcRkCtUbeAEhlAD2t9r2YN",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOgibTs3pWvJOb3YgFVGh9Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -789,9 +790,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 145
+          "height": 53
         },
-        "outputId": "be72cc6e-fafd-43b9-cd34-2f7ca4a2ff14"
+        "outputId": "23b2931e-1710-415b-9e2c-cad00a0c8f89"
       },
       "source": [
         "try:\n",
@@ -803,15 +804,11 @@
         "  is_google_colab = False\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
             "Mounted at /content/drive\n",
             "In Google CoLab\n"
           ],
@@ -826,14 +823,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 217
+          "height": 251
         },
-        "outputId": "ae786a5f-f25d-4ec2-841f-db6b4992f7d9"
+        "outputId": "f5dea14f-c714-4788-ca88-2ac7880ea332"
       },
       "source": [
         "!find /content/drive/My\\ Drive/Colab\\ Notebooks/"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -847,11 +844,78 @@
             "/content/drive/My Drive/Colab Notebooks/dogs-vs-cats.zip\n",
             "/content/drive/My Drive/Colab Notebooks/Chapter5Deeplearningforcomputervision.ipynb\n",
             "/content/drive/My Drive/Colab Notebooks/Python for Data Scientists & Engineers.ipynb\n",
-            "/content/drive/My Drive/Colab Notebooks/Copy of Python for Data Scientists & Engineers.ipynb\n"
+            "/content/drive/My Drive/Colab Notebooks/Copy of Python for Data Scientists & Engineers.ipynb\n",
+            "/content/drive/My Drive/Colab Notebooks/sampleSubmission.csv\n",
+            "/content/drive/My Drive/Colab Notebooks/test1.zip\n",
+            "/content/drive/My Drive/Colab Notebooks/train.zip\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jrlnbASrprsZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "7286da95-7ad8-47d5-a5e8-1c971ef6980e"
+      },
+      "source": [
+        "!ls"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "cats_and_dogs_small  sample_data\t   test1      train\n",
+            "drive\t\t     sampleSubmission.csv  test1.zip  train.zip\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VXoWyp-kp6A2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e5525165-2ed6-412a-b858-47c9cf5b0173"
+      },
+      "source": [
+        "!mv train/*.jpg ./drive/My\\ Drive/Colab\\ Notebooks\\"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yPodc1VMrgvx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!mv test1/*.jpg ./drive/My\\ Drive/Colab\\ Notebooks\\"
+      ],
+      "execution_count": 11,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -937,7 +1001,7 @@
         "    dst = os.path.join(test_dogs_dir, fname)\n",
         "    shutil.copyfile(src, dst)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
